# vision-core

./: .gitignore  CMakeLists.txt  README.md  create_pkg.sh  install_pre.sh  set_env.sh
DEBIAN/: control  control-common  control-depth  control-detect  control-firmware  control-meta  control-segment  postinst-common  postinst-depth  postinst-detect  postinst-segment
cmake/: vision_core-config-version.cmake  vision_core-config.cmake
common/: util.cpp  util.hpp
configs/: config.yaml
detect/: CMakeLists.txt  README:md
detect/include/detect/: BaseDetector.hpp  OpenCVDetector.hpp  OpenVINODetector.hpp  TensorRTDetector.hpp  VideoProcessor.hpp
detect/src/: BaseDetector.cpp  OpenCVDetector.cpp  OpenVINODetector.cpp  TensorRTDetector.cpp  VideoProcessor.cpp
examples/: CMakeLists.txt
examples/detect/: AppManager.cpp  AppManager.hpp  CMakeLists.txt  main.cpp
examples/mono/: CMakeLists.txt  mono.cpp  mono_cv.cpp  mono_ros.cpp  ros_mono.cpp
examples/nreal/: CMakeLists.txt  nreal.cpp
examples/stereo/: CMakeLists.txt  out.avi  stereo.cpp  stereo_ros.cpp  zed_calib_params.yml
firmwares/: CMakeLists.txt
firmwares/include/: nreal_light.hpp
firmwares/src/: nreal_light.cpp
gui/: GUIRenderer.cpp  GUIRenderer.hpp  GUIRendererCV.cpp  GUIRendererCV.hpp  GUIRendererGL.cpp  GUIRendererGL.hpp
mono/: CMakeLists.txt
mono/include/: mono_depth.hpp  utils.hpp
mono/src/: mono_depth.cpp  utils.cpp
segment/: CMakeLists.txt  main.cpp
segment/src/: segment.cpp  segment.h  trt_module.cpp  trt_module.h
stereo/: CMakeLists.txt
stereo/include/: stereo.hpp  stereo_preprocess.h  trt_stereo.h
stereo/src/: stereo.cpp  stereo_preprocess.cu  trt.cpp
