cmake_minimum_required (VERSION 3.8)
set(CMAKE_CXX_STANDARD 17)
# add subdirectories for each dir found inside the examples directory
file(GLOB children RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(child ${children})
  if(IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child})
    if(NOT ${child} STREQUAL "build")
    message(STATUS "Adding example: ${child}")
    add_subdirectory(${child})
    endif()
  endif()
endforeach()
